--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "6to5ify": "^4.1.1",
     "browserify": "^8.1.3",
+    "dropzone": "^4.0.1",
     "gulp": "^3.8.11",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-watch": "^4.1.1",
@@ -24,7 +25,8 @@
     "moment": "^2.9.0",
     "moment-timezone": "^0.3.0",
     "papaparse": "^4.1.0",
-    "vinyl-source-stream": "^1.0.0"
+    "vinyl-source-stream": "^1.0.0",
+    "vue": "^0.11.5"
   },
   "engines": {
     "node": "0.10.x"
