--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "express": "^4.12.2"
   },
   "devDependencies": {
-    "6to5ify": "^4.1.1",
+    "babelify": "^5.0.4",
     "browserify": "^8.1.3",
     "dropzone": "^4.0.1",
     "gulp": "^3.8.11",
+    "gulp-sass": "^1.3.3",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-watch": "^4.1.1",
     "gulp-webserver": "^0.9.0",
@@ -24,6 +25,7 @@
     "lokijs": "^1.2.0",
     "moment": "^2.9.0",
     "moment-timezone": "^0.3.0",
+    "node-bourbon": "^4.2.1-beta1",
     "papaparse": "^4.1.0",
     "vinyl-source-stream": "^1.0.0",
     "vue": "^0.11.5"
