--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-sourcemaps": "^1.3.0",
     "gulp-watch": "^4.1.1",
     "gulp-webserver": "^0.9.0",
+    "interact.js": "^1.2.4",
     "is_js": "^0.7.0",
     "lodash": "^3.3.0",
     "lokijs": "^1.2.0",
