--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   },
   "devDependencies": {
     "babelify": "^5.0.4",
-    "browserify": "^8.1.3",
+    "browserify": "^9.0.7",
+    "color": "^0.8.0",
+    "deepmerge": "^0.2.7",
     "dropzone": "^4.0.1",
     "gulp": "^3.8.11",
     "gulp-sass": "^1.3.3",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-watch": "^4.1.1",
+    "gulp-watchify": "^0.5.0",
     "gulp-webserver": "^0.9.0",
+    "immutable": "^3.7.1",
     "interact.js": "^1.2.4",
     "is_js": "^0.7.0",
     "lodash": "^3.3.0",
@@ -28,8 +32,13 @@
     "moment-timezone": "^0.3.0",
     "node-bourbon": "^4.2.1-beta1",
     "papaparse": "^4.1.0",
+    "react": "^0.13.1",
+    "react-bootstrap": "^0.20.2",
+    "react-router": "^0.13.2",
+    "reflux": "^0.2.7",
     "vinyl-source-stream": "^1.0.0",
-    "vue": "^0.11.5"
+    "vue": "^0.11.5",
+    "watchify": "^3.0.0"
   },
   "engines": {
     "node": "0.10.x"
